@@ -443,7 +443,7 @@ public class ChainStorageTest {
             .map(SignedBlockAndState::getBlock)
             .collect(Collectors.toList());
     // Remove a block from the end
-    blocks.remove(blocks.size() - 1);
+    blocks.removeLast();
 
     final SafeFuture<Void> result =
         chainStorage.onFinalizedBlocks(blocks, Map.of(), Optional.empty());
